--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tengo algo que decirte...</title>
+<title>Para Mi Susy ❤️</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div class="corazones"></div>
+
 <div class="pantalla-inicial" id="inicio">
     <h1>Tengo algo que decirte...</h1>
     <p>Pero primero necesito saber que eres tú 💌</p>
-    <input type="password" id="clave" placeholder="Escribe nuestra palabra secreta">
+    <input type="password" id="clave" placeholder="Nuestra palabra secreta">
     <button onclick="verificar()">Entrar</button>
 </div>
 
